# project1

./: CMakeLists.txt  Header.h  README.md  calculator.cpp  calculator.h  data_structre.cpp  data_structure.h  demo1.cpp  platform.cpp  platform.h  toolbox.cpp
